About & Contact completed

--- a/MVC-Burger-Project/Views/Burger/Index.cshtml
+++ b/MVC-Burger-Project/Views/Burger/Index.cshtml
@@ -32,10 +32,10 @@
                                     <span>Big Deal</span>
                                 </div>
                                 <h3>
-                                    Barcode <br>
-                                    Burger
+                                    Cheese <br>
+                                    Lover's
                                 </h3>
-                                <h4>Mexican</h4>
+                                <h4 class="mt-2">Beef Burger</h4>
                             </div>
                         </div>
                     </div>
