--- a/MVC-Burger-Project/Views/Burger/AboutUs.cshtml
+++ b/MVC-Burger-Project/Views/Burger/AboutUs.cshtml
@@ -5,7 +5,7 @@
 
     <!-- bradcam_area_start -->
     <div class="bradcam_area breadcam_bg_1 overlay">
-        <h3>about</h3>
+        <h3>about us</h3>
     </div>
     <!-- bradcam_area_end -->
     <!-- about_area_start -->
@@ -31,9 +31,9 @@
                                 in your City
                             </h3>
                         </div>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate</p>
+                        <p>Welcome to our burger heaven! At BarCode Burger, we're passionate about crafting the most delectable and mouthwatering burgers that will take your taste buds on an unforgettable journey. Our commitment to quality is evident in every bite – from the sizzling beef patties to the crispy chicken creations and the hearty vegan options. With a perfect blend of flavors, fresh ingredients, and creative combinations, we're here to redefine your burger experience. Whether you're a carnivore, a chicken enthusiast, a veggie lover, or a devoted vegan, we have a burger that's tailor-made for your palate. Join us and savor the artistry behind each burger – a fusion of culinary innovation and love for good food. Your burger adventure starts here!</p>
                         <div class="img_thumb">
-                            <img src="/img/jessica-signature.png" alt="">
+                            <img src="/img/barcode-signature.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -54,268 +54,41 @@
             </div>
         </div>
         <div class="single_gallery big_img">
-            <a class="popup-image" href="/img/gallery/1.png">
+            <a class="popup-image" href="~/img/gallery/1.png">
                 <i class="ti-plus"></i>
             </a>
             <img src="/img/gallery/1.png" alt="">
         </div>
         <div class="single_gallery small_img">
-            <a class="popup-image" href="/img/gallery/2.png">
+            <a class="popup-image" href="~/img/gallery/2.png">
                 <i class="ti-plus"></i>
             </a>
             <img src="/img/gallery/2.png" alt="">
         </div>
         <div class="single_gallery small_img">
-            <a class="popup-image" href="/img/gallery/3.png">
+            <a class="popup-image" href="~/img/gallery/3.png">
                 <i class="ti-plus"></i>
             </a>
             <img src="/img/gallery/3.png" alt="">
         </div>
 
         <div class="single_gallery small_img">
-            <a class="popup-image" href="/img/gallery/4.png">
+            <a class="popup-image" href="~/img/gallery/4.png">
                 <i class="ti-plus"></i>
             </a>
             <img src="/img/gallery/4.png" alt="">
         </div>
         <div class="single_gallery small_img">
-            <a class="popup-image" href="/img/gallery/5.png">
+            <a class="popup-image" href="~/img/gallery/5.png">
                 <i class="ti-plus"></i>
             </a>
             <img src="/img/gallery/5.png" alt="">
         </div>
         <div class="single_gallery big_img">
-            <a class="popup-image" href="/img/gallery/6.png">
+            <a class="popup-image" href="~/img/gallery/6.png">
                 <i class="ti-plus"></i>
             </a>
             <img src="/img/gallery/6.png" alt="">
         </div>
     </div>
-
-    <!-- testimonial_area_start  -->
-    <div class="testimonial_area ">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title mb-60 text-center">
-                        <span>Testimonials</span>
-                        <h3>Happy Customers</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="testmonial_active owl-carousel">
-                        <div class="single_carousel">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <div class="single_testmonial text-center">
-                                        <p>
-                                            “Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor
-                                            sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec
-                                            sed
-                                            neque.
-                                        </p>
-                                        <div class="testmonial_author">
-                                            <div class="thumb">
-                                                <img src="/img/testmonial/1.png" alt="">
-                                            </div>
-                                            <h4>Kristiana Chouhan</h4>
-                                            <div class="stars">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_carousel">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <div class="single_testmonial text-center">
-                                        <p>
-                                            “Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor
-                                            sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec
-                                            sed
-                                            neque.
-                                        </p>
-                                        <div class="testmonial_author">
-                                            <div class="thumb">
-                                                <img src="/img/testmonial/2.png" alt="">
-                                            </div>
-                                            <h4>Arafath Hossain</h4>
-                                            <div class="stars">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_carousel">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <div class="single_testmonial text-center">
-                                        <p>
-                                            “Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor
-                                            sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec
-                                            sed
-                                            neque.
-                                        </p>
-                                        <div class="testmonial_author">
-                                            <div class="thumb">
-                                                <img src="/img/testmonial/3.png" alt="">
-                                            </div>
-                                            <h4>A.H Shemanto</h4>
-                                            <div class="stars">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- testimonial_area_ned  -->
-    <!-- instragram_area_start -->
-    <div class="instragram_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_instagram">
-                        <img src=" /img/instragram/1.png" alt="">
-                        <div class="ovrelay">
-                            <a href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_instagram">
-                        <img src="/img/instragram/2.png" alt="">
-                        <div class="ovrelay">
-                            <a href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_instagram">
-                        <img src="/img/instragram/3.png" alt="">
-                        <div class="ovrelay">
-                            <a href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_instagram">
-                        <img src="/img/instragram/4.png" alt="">
-                        <div class="ovrelay">
-                            <a href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- instragram_area_end -->
-
-    <footer class="footer">
-        <div class="footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-4 col-md-6 col-lg-4">
-                        <div class="footer_widget text-center ">
-                            <h3 class="footer_title pos_margin">
-                                New York
-                            </h3>
-                            <p>
-                                5th flora, 700/D kings road, <br>
-                                green lane New York-1782 <br>
-                                <a href="#">info@burger.com</a>
-                            </p>
-                            <a class="number" href="#">+10 378 483 6782</a>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 col-lg-4">
-                        <div class="footer_widget text-center ">
-                            <h3 class="footer_title pos_margin">
-                                California
-                            </h3>
-                            <p>
-                                5th flora, 700/D kings road, <br>
-                                green lane New York-1782 <br>
-                                <a href="#">info@burger.com</a>
-                            </p>
-                            <a class="number" href="#">+10 378 483 6782</a>
-
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-md-12 col-lg-4">
-                        <div class="footer_widget">
-                            <h3 class="footer_title">
-                                Stay Connected
-                            </h3>
-                            <form action="#" class="newsletter_form">
-                                <input type="text" placeholder="Enter your mail">
-                                <button type="submit">Sign Up</button>
-                            </form>
-                            <p class="newsletter_text">Stay connect with us to get exclusive offer!</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-4">
-                        <div class="socail_links text-center">
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <i class="ti-instagram"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="ti-twitter-alt"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="ti-facebook"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-google-plus"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
 </body>
