--- a/MVC-Burger-Project/Views/Burger/Menu.cshtml
+++ b/MVC-Burger-Project/Views/Burger/Menu.cshtml
@@ -43,14 +43,14 @@
                 <nav class="navbar navbar-expand-lg bg-body-tertiary">
                     <div class="container-fluid">
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                            <table class="table navbar-nav table-striped-columns">
+                            <table class="table navbar-nav table-striped-columns table-responsive-sm" id="">
                                 <tr class="nav-item">
-                                @foreach (Category category in Model.Categories)
-                                {
-                                    
+                                    @foreach (Category category in Model.Categories)
+                                    {
+
                                         <td><a class="nav-link active" aria-current="page" href="#@category.Name"><h3>@category.Name</h3></a></td>
-                                    
-                                }
+
+                                    }
                                 </tr>
                                 @* <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -69,32 +69,32 @@
             <hr />
             @foreach (Category item in Model.Categories)
             {
-                <div id ="@item.Name">
+                <div id="@item.Name" class="mb-3">
                     <br /><br /><br /><br /><br /><br />
-                    </div>
-                <h2 class="text-center" ><b>@item.Name</b></h2>
+                </div>
+                <h2 class="text-center"><b>@item.Name</b></h2>
                 <br />
-                    <div class="row" >
+                <div class="row">
                     @foreach (Menu menu in Model.Menus)
-                    { 
+                    {
                         @if (item.Name == menu.Burger.Category.Name)
                         {
-                    
-                                <div class="col-xl-6 col-md-6 col-lg-6">
-                                    <div class="single_delicious d-flex align-items-center">
-                                        <div class="thumb">
-                                            <img src="~/img/burger/@menu.Burger.Picture" alt="">
-                                        </div>
-                                        <div class="info">
-                                            <h3>@menu.Burger.Name Menu</h3>
-                                            <p>@menu.Burger.Description</p>
+
+                            <div class="col-xl-6 col-md-6 col-lg-6">
+                                <div class="single_delicious d-flex align-items-center">
+                                    <div class="thumb">
+                                        <img src="~/img/burger/@menu.Burger.Picture" alt="">
+                                    </div>
+                                    <div class="info">
+                                        <h3>@menu.Burger.Name Menu</h3>
+                                        <p>@menu.Burger.Description</p>
                                         <span>$@menu.TotalPrice </span>
                                         <a class="btn btn-outline-success mr-3 mt-3" onclick="openForm()">Add To Cart<i class="fa-solid fa-cart-plus ml-3"></i></a><a href="#" class="btn btn-outline-info mt-3">More Details<i class="fa-solid fa-circle-info ml-3 "></i></a>
-                                       
-                                        </div>
+
                                     </div>
                                 </div>
-                        
+                            </div>
+
                         }
                     }
 
@@ -106,7 +106,7 @@
                             <div class="col-xl-6 col-md-6 col-lg-6">
                                 <div class="single_delicious d-flex align-items-center">
                                     <div class="thumb">
-                                        <img src="~/img/burger/@side.Picture" alt="Resim eklenecek">
+                                        <img src="~/img/side/@side.Picture" alt="Resim eklenecek">
                                     </div>
                                     <div class="info">
                                         <h3>@side.Name</h3>
@@ -114,7 +114,7 @@
                                         <a class="btn btn-outline-success mr-3 mt-3" onclick="openForm()">
                                             Add To Cart<i class="fa-solid fa-cart-plus ml-3"></i>
 
-                            </a>
+                                        </a>
 
                                         <a href="#" class="btn btn-outline-info mt-3">More Details<i class="fa-solid fa-circle-info ml-3"></i></a>
 
@@ -133,7 +133,7 @@
                             <div class="col-xl-6 col-md-6 col-lg-6">
                                 <div class="single_delicious d-flex align-items-center">
                                     <div class="thumb">
-                                        <img src="~/img/burger/@drink.Picture" alt="Resim eklenecek">
+                                        <img src="~/img/drink/@drink.Picture" alt="Resim eklenecek">
                                     </div>
                                     <div class="info">
                                         <h3>@drink.Name</h3>
@@ -143,19 +143,16 @@
                                     </div>
                                 </div>
                             </div>
-
-
                         }
                     }
                     @if (item.CategoryID == 7)
                     {
                         @foreach (Sauce sauce in Model.Sauces)
                         {
-
                             <div class="col-xl-6 col-md-6 col-lg-6">
                                 <div class="single_delicious d-flex align-items-center">
                                     <div class="thumb">
-                                        <img src="~/img/burger/@sauce.Picture" alt="Resim eklenecek">
+                                        <img src="~/img/sauce/@sauce.Picture" alt="Resim eklenecek">
                                     </div>
                                     <div class="info">
                                         <h3>@sauce.Name</h3>
@@ -164,214 +161,24 @@
                                     </div>
                                 </div>
                             </div>
-
-
                         }
                     }
                 </div>
                 <hr />
             }
-            
-            
         </div>
     </div>
-
-
     <!-- best_burgers_area_end  -->
-    <!-- features_room_startt -->
-    <div class="Burger_President_area">
-        <div class="Burger_President_here">
-            <div class="single_Burger_President">
-                <div class="room_thumb">
-                    <img src="img/burgers/1.png" alt="">
-                    <div class="room_heading d-flex justify-content-between align-items-center">
-                        <div class="room_heading_inner">
-                            <span>$20</span>
-                            <h3>The Burger President</h3>
-                            <p>Great way to make your business appear trust <br> and relevant.</p>
-                            <a class="boxed-btn3">Order Now</a>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="single_Burger_President">
-                <div class="room_thumb">
-                    <img src="img/burgers/2.png" alt="">
-                    <div class="room_heading d-flex justify-content-between align-items-center">
-                        <div class="room_heading_inner">
-                            <span>$20</span>
-                            <h3>The Burger President</h3>
-                            <p>Great way to make your business appear trust <br> and relevant.</p>
-                            <a href="#" class="boxed-btn3">Order Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- features_room_end -->
-    <!-- testimonial_area_start  -->
-    <div class="testimonial_area ">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title mb-60 text-center">
-                        <span>Testimonials</span>
-                        <h3>Happy Customers</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="testmonial_active owl-carousel">
-                        <div class="single_carousel">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <div class="single_testmonial text-center">
-                                        <p>
-                                            “Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor
-                                            sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec
-                                            sed
-                                            neque.
-                                        </p>
-                                        <div class="testmonial_author">
-                                            <div class="thumb">
-                                                <img src="img/testmonial/1.png" alt="">
-                                            </div>
-                                            <h4>Kristiana Chouhan</h4>
-                                            <div class="stars">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_carousel">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <div class="single_testmonial text-center">
-                                        <p>
-                                            “Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor
-                                            sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec
-                                            sed
-                                            neque.
-                                        </p>
-                                        <div class="testmonial_author">
-                                            <div class="thumb">
-                                                <img src="img/testmonial/2.png" alt="">
-                                            </div>
-                                            <h4>Arafath Hossain</h4>
-                                            <div class="stars">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="single_carousel">
-                            <div class="row justify-content-center">
-                                <div class="col-lg-8">
-                                    <div class="single_testmonial text-center">
-                                        <p>
-                                            “Donec imperdiet congue orci consequat mattis. Donec rutrum porttitor
-                                            sollicitudin. Pellentesque id dolor tempor sapien feugiat ultrices nec
-                                            sed
-                                            neque.
-                                        </p>
-                                        <div class="testmonial_author">
-                                            <div class="thumb">
-                                                <img src="img/testmonial/3.png" alt="">
-                                            </div>
-                                            <h4>A.H Shemanto</h4>
-                                            <div class="stars">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- testimonial_area_ned  -->
-    <!-- instragram_area_start -->
-    <div class="instragram_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_instagram">
-                        <img src="img/instragram/1.png" alt="">
-                        <div class="ovrelay">
-                            <a href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_instagram">
-                        <img src="img/instragram/2.png" alt="">
-                        <div class="ovrelay">
-                            <a href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_instagram">
-                        <img src="img/instragram/3.png" alt="">
-                        <div class="ovrelay">
-                            <a href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="single_instagram">
-                        <img src="img/instragram/4.png" alt="">
-                        <div class="ovrelay">
-                            <a href="#">
-                                <i class="fa fa-instagram"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- instragram_area_end -->
-
-
     <script>
         //Pop-up Form Start
         function openForm() {
-           document.getElementById("myForm").style.display = "block";
+            document.getElementById("myForm").style.display = "block";
         }
 
         function closeForm() {
             document.getElementById("myForm").style.display = "none";
         }
-                        //Popup Form End
+                                //Popup Form End
     </script>
     @* <script>
     $(document).ready(function () {
