--- a/MVC-Burger-Project/wwwroot/css/burger.css
+++ b/MVC-Burger-Project/wwwroot/css/burger.css
@@ -68,3 +68,11 @@
     }
 /*Pop-Up Form End*/
 
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 90px;
+    display: none;
+    z-index: 10;
+}
